--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -35,6 +35,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Ninject" version="3.3.1" targetFramework="net45" />
+  <package id="OpenHardwareMonitor" version="0.7.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
