--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
   <package id="jQuery" version="3.2.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
@@ -34,10 +34,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
-  <package id="Ninject" version="3.3.1" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net45" />
   <package id="OpenHardwareMonitor" version="0.7.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
