--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -224,6 +224,11 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Constants\SkillTypeMaster.cs">
+      <DependentUpon>SkillTypeMaster.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Constants\ApplicationMaster.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -243,13 +248,22 @@
       <DependentUpon>MainDbContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IPortfolioService.cs" />
     <Compile Include="Services\ILandingPageService.cs" />
+    <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\LandingPageService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\DropDownViewModel.cs" />
     <Compile Include="ViewModels\MainLandingPageViewModel.cs" />
+    <Compile Include="ViewModels\PortfolioViewModel.cs" />
     <Compile Include="ViewModels\SiteLinkViewModel.cs" />
+    <Compile Include="ViewModels\UserStatusViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Constants\SkillTypeMaster.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>SkillTypeMaster.cs</LastGenOutput>
+    </Content>
     <Content Include="Constants\ApplicationMaster.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ApplicationMaster.cs</LastGenOutput>
@@ -409,10 +423,10 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_MediaLayout.cshtml" />
+    <Content Include="Views\Shared\_PortfolioLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Context\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
