--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -248,13 +248,17 @@
       <DependentUpon>MainDbContext.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IMediaDashboardService.cs" />
     <Compile Include="Services\IPortfolioService.cs" />
     <Compile Include="Services\ILandingPageService.cs" />
+    <Compile Include="Services\MediaDashboardService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\LandingPageService.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ContactEmailViewModel.cs" />
     <Compile Include="ViewModels\DropDownViewModel.cs" />
     <Compile Include="ViewModels\MainLandingPageViewModel.cs" />
+    <Compile Include="ViewModels\MediaDashboardViewModel.cs" />
     <Compile Include="ViewModels\PortfolioViewModel.cs" />
     <Compile Include="ViewModels\SiteLinkViewModel.cs" />
     <Compile Include="ViewModels\UserStatusViewModel.cs" />
@@ -268,6 +272,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ApplicationMaster.cs</LastGenOutput>
     </Content>
+    <Content Include="Content\bootsnack.css" />
     <Content Include="Content\cover2.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
@@ -369,6 +374,11 @@
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\jquery.bootsnack.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\mediaScripts.js" />
     <Content Include="Scripts\base.js" />
     <Content Include="Scripts\bootstrap-multiselect.js" />
@@ -410,6 +420,7 @@
     <Content Include="Views\Home\_ContactContent.cshtml" />
     <Content Include="Views\Home\_ServerStatus.cshtml" />
     <Content Include="Views\Home\_Apps.cshtml" />
+    <Content Include="Views\MediaDashboard\_ManageMediaDashboard.cshtml" />
     <None Include="Views\Portfolio\Index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -424,6 +435,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\_MediaLayout.cshtml" />
     <Content Include="Views\Shared\_PortfolioLayout.cshtml" />
+    <Content Include="Views\Portfolio\_ManagePortfolio.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
