--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -35,11 +35,13 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="Moment.js" version="2.19.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net45" />
+  <package id="Node.js" version="5.3.0" targetFramework="net45" />
   <package id="OpenHardwareMonitor" version="0.7.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
