updated UI, trying to get email working

--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -14,6 +14,23 @@
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
+  <system.net>
+    <!--<mailSettings>
+      <smtp from="n0r3ply@hotmail.com" deliveryMethod="SpecifiedPickupDirectory">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:/Temp"/>
+        <network host="localhost"/>
+      </smtp>
+    </mailSettings>-->
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="n0r3ply@hotmail.com">
+        <network host="smtp-mail.outlook.com"
+                 port="465"
+                 userName="n0r3ply@hotmail.com"
+                 password="lineDrop!"
+                 enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
