--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -121,6 +121,7 @@
       <HintPath>..\packages\Microsoft.Owin.Security.Twitter.3.1.0\lib\net45\Microsoft.Owin.Security.Twitter.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -254,6 +255,7 @@
     <Compile Include="Services\MediaDashboardService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
     <Compile Include="Services\LandingPageService.cs" />
+    <Compile Include="PerformanceHub.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ContactEmailViewModel.cs" />
     <Compile Include="ViewModels\DropDownViewModel.cs" />
@@ -604,6 +606,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\iconset\" />
+    <Folder Include="SignalR\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
