--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -5,11 +5,11 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
-    <add name="MainDbConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=MyDatabase;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyDatabase;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -33,9 +33,17 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
@@ -88,6 +96,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.4.0" newVersion="3.3.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
