--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -45,6 +45,8 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5" />
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
