--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -5,6 +5,7 @@
   <package id="easypiechart.jquery" version="2.1.6" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
+  <package id="Handlebars.js" version="3.0.0.0" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net45" />
@@ -47,7 +48,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
-  <package id="TinyMCE" version="4.7.3" targetFramework="net45" />
+  <package id="TinyMCE" version="4.7.4" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
