--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -620,6 +620,8 @@
     <Content Include="Views\Shared\_MediaLayout.cshtml" />
     <Content Include="Views\Shared\_PortfolioLayout.cshtml" />
     <Content Include="Views\Portfolio\_ManagePortfolio.cshtml" />
+    <Content Include="Views\Portfolio\_AddNewTechSkill.cshtml" />
+    <Content Include="Views\Portfolio\_AddNewLanguageSkill.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
