--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net461" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
   <package id="easypiechart.jquery" version="2.1.6" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
@@ -37,7 +39,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Moment.js" version="2.19.3" targetFramework="net45" />
+  <package id="Moment.js" version="2.20.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Ninject" version="3.3.4" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net45" />
