got a good start on homepage

--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -247,6 +247,7 @@
     </Compile>
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\MediaDashboardController.cs" />
+    <Compile Include="Controllers\MyHomeController.cs" />
     <Compile Include="Controllers\PortfolioController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -301,9 +302,22 @@
     <Content Include="Content\cover.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\HomeImages\about-image.jpg" />
+    <Content Include="Content\HomeImages\blog-detail-image.jpg" />
+    <Content Include="Content\HomeImages\blog-header-bg.jpg" />
+    <Content Include="Content\HomeImages\blog-image1.jpg" />
+    <Content Include="Content\HomeImages\blog-image2.jpg" />
+    <Content Include="Content\HomeImages\blog-image3.jpg" />
+    <Content Include="Content\HomeImages\blog-image4.jpg" />
+    <Content Include="Content\HomeImages\home-bg.jpg" />
+    <Content Include="Content\HomeImages\work-image1.jpg" />
+    <Content Include="Content\HomeImages\work-image2.jpg" />
+    <Content Include="Content\HomeImages\work-image3.jpg" />
+    <Content Include="Content\HomeImages\work-image4.jpg" />
     <Content Include="Content\Images\back1.png" />
     <Content Include="Content\Images\check.png" />
     <Content Include="Content\Images\check2.png" />
+    <Content Include="Content\magnific-popup.css" />
     <Content Include="Content\MediaImages\media1.jpg" />
     <Content Include="Content\MediaImages\media2.jpg" />
     <Content Include="Content\MediaImages\media3.png" />
@@ -344,6 +358,7 @@
     <Content Include="Content\reset.css" />
     <Content Include="Content\style.css" />
     <Content Include="Content\templatemo-style.css" />
+    <Content Include="Content\templatemo-style2.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -398,9 +413,12 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap-iconpicker-iconset-all.min.js" />
     <Content Include="Scripts\bootstrap-iconpicker.min.js" />
+    <Content Include="Scripts\homeScripts.js" />
     <Content Include="Scripts\jquery.bootsnack.js" />
     <Content Include="Scripts\jquery.easypiechart.js" />
     <Content Include="Scripts\jquery.easypiechart.min.js" />
+    <Content Include="Scripts\jquery.magnific-popup.min.js" />
+    <Content Include="Scripts\jquery.stellar.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -607,6 +625,8 @@
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-mobile.woff" />
     <Content Include="Scripts\tinymce\langs\readme.md" />
     <Content Include="Views\Error\Error.cshtml" />
+    <Content Include="Views\MyHome\blog-detail.cshtml" />
+    <Content Include="Views\MyHome\Index.cshtml" />
     <None Include="Views\Portfolio\Index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -622,6 +642,7 @@
     <Content Include="Views\Shared\_MediaLayout.cshtml" />
     <Content Include="Views\Shared\_PortfolioLayout.cshtml" />
     <Content Include="Views\Portfolio\_ManagePortfolio.cshtml" />
+    <Content Include="Views\Shared\_HomeLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
